# tracium-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/tracium/: __init__.py
src/tracium/api/: endpoints.py  http_client.py
src/tracium/context/: context_propagation.py
src/tracium/core/: client.py  config.py  version.py
src/tracium/helpers/: background_sender.py  call_hierarchy.py  logging_config.py  parallel_tracker.py  retry.py  retry_async.py  security.py  thread_helpers.py  validation.py
src/tracium/instrumentation/: auto_detection.py  auto_instrumentation.py  auto_trace_tracker.py  decorators.py
src/tracium/instrumentation/web_frameworks/: __init__.py  celery.py  django.py  fastapi.py  flask.py  generic.py
src/tracium/integrations/: google.py  langchain.py  langgraph.py  openai.py
src/tracium/integrations/anthropic/: __init__.py  context_manager.py  patch.py  stream_wrappers.py  tracing.py  utils.py
src/tracium/models/: span_handle.py  trace_handle.py  trace_state.py
tests/test_context/: test_trace_context.py
tests/test_core/: test_client.py
tests/test_helpers/: test_retry.py  test_validation.py
