[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tracium"
version = "1.0.1"
description = "Official Python SDK for the Tracium telemetry and evaluation API. Automatic tracing for OpenAI, Anthropic, Google Gemini, LangChain, and LangGraph."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "Tracium", email = "support@tracium.ai" },
]
keywords = [
    "tracium",
    "telemetry",
    "observability",
    "llm",
    "openai",
    "anthropic",
    "claude",
    "gemini",
    "langchain",
    "monitoring",
    "evaluation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "httpx>=0.27,<0.29",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.9.9",
    "mypy>=1.13.0",
    "python-dotenv>=1.0.0",
]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
google = [
    "google-generativeai>=0.3.0",
    "google-genai>=0.1.0"
]
langchain = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0"
]
langgraph = ["langgraph>=0.0.1"]

flask = ["flask>=2.0"]
django = ["django>=4.0"]
fastapi = [
    "fastapi>=0.100",
    "starlette>=0.30",
    "starlette-context>=0.3"
]
celery = ["celery>=5.3"]

all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
    "google-genai>=0.1.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.1",
    "flask>=2.0",
    "django>=4.0",
    "fastapi>=0.100",
    "starlette>=0.30",
    "starlette-context>=0.3",
    "celery>=5.3"
]

[project.urls]
Homepage = "https://tracium.ai"
Repository = "https://github.com/AntonijSimonovski/tracium-python"
Documentation = "https://docs.tracium.ai"
Changelog = "https://github.com/AntonijSimonovski/tracium-python/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/AntonijSimonovski/tracium-python/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tracium = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
extend-ignore = ["PGH003"]  # Prevent ruff from adding blanket type ignores

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=tracium",
    "--cov-report=term-missing",
]

